Доработка pop-up

--- a/pages/index.css
+++ b/pages/index.css
@@ -25,6 +25,7 @@
 @import url(../blocks/popup/__close-button/popup__close-button.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__container-form/popup__container-form.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__save-button/popup__save-button.css);
 
