--- a/blocks/elements-list/elements-list.css
+++ b/blocks/elements-list/elements-list.css
@@ -1,4 +1,4 @@
-.elements {
+.elements-list {
   display: grid;
   width: 100%;
   grid-template-columns: repeat(3, 1fr);
@@ -9,14 +9,14 @@
 }
 
 @media screen and (max-width: 1023px) {
-  .elements {
+  .elements-list {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr);
   }
 }
 
 @media screen and (max-width: 767px) {
-  .elements {
+  .elements-list {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(6, 1fr);
     width: 88.125%;
