--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -5,6 +5,11 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   padding: 0;
   outline: none;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.21;
 }
 
 .popup__input:focus {
