--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -7,6 +7,10 @@
   border: none;
   cursor: pointer;
   padding: 0;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
 }
 
 .popup__save-button:hover {
@@ -16,5 +20,6 @@
 @media screen and (max-width: 767px) {
   .popup__save-button {
     width: 100%;
+    font-size: 14px;
   }  
 }
