--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,16 +1,21 @@
 .profile__name {
   color: white;
+  max-width: 350px;
   font-style: normal;
   font-weight: 500;
   font-size: 42px;
   line-height: 1.14;
   margin: 0;
+  text-overflow: ellipsis; 
+  white-space: nowrap; 
+  overflow: hidden;
 }
 
 @media screen and (max-width: 1023px) {
   .profile__name {
     font-size: 30px;
     line-height: 1.22;
+    max-width: 220px;
   }
 }
 
