--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,6 +1,11 @@
 .element__image {
-  width: 100%;
+  position: absolute;
+  width: 100%;  
   border-radius: 10px 10px 0 0;
   margin: 0;
   padding: 0;
+  min-height: 100%;
+  max-height: 100%;
+  object-fit: fill;
+  object-position: top left;
 }
