--- a/blocks/popup-image/popup-image.css
+++ b/blocks/popup-image/popup-image.css
@@ -1,7 +1,7 @@
-.popup {
+.popup-image {
   position: fixed;
   z-index: 30;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.9);
   top: 0;
   right: 0;
   left: 0;
