--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,4 +1,4 @@
-.popup__save-button {
+.popup__button {
   width: 358px;
   height: 50px;
   margin-top: 48px;
@@ -13,12 +13,12 @@
   font-size: 18px;
 }
 
-.popup__save-button:hover {
+.popup__button:hover {
   opacity: 0.8;
 }
 
 @media screen and (max-width: 767px) {
-  .popup__save-button {
+  .popup__button {
     width: 100%;
     font-size: 14px;
   }  
