--- a/pages/index.css
+++ b/pages/index.css
@@ -31,10 +31,12 @@
 @import url(../blocks/popup/__input/_type/popup__input_type_place-link.css);
 @import url(../blocks/popup/__input/_type/popup__input_type_place-name.css);
 @import url(../blocks/popup/__button/popup__button.css);
+@import url(../blocks/popup/__button/_disabled/popup__button_disabled.css);
 @import url(../blocks/popup/__container-image/popup__container-image.css);
 @import url(../blocks/popup/__desription/popup__description.css);
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/_type/popup_type_image.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__close-button/popup__close-button.css);
-
+@import url(../blocks/popup/__input/_type/popup__input_type_error.css);
+@import url(../blocks/popup/__error/_visible/popup__error_visible.css);
