--- a/blocks/popup/__error/_visible/popup__error_visible.css
+++ b/blocks/popup/__error/_visible/popup__error_visible.css
@@ -1,14 +1,3 @@
 .popup__error_visible {
-  display: inline-block;
-  width: 358px;
-  color: red;
-  font-size: 12px;
-  line-height: 1.21;
-  margin-top: 5px;
-}
-
-@media screen and (max-width: 767px) {
-  .popup__error_visible {
-    width: 100%;
-  }  
+  visibility: visible;  
 }
