--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -2,11 +2,5 @@
   border-radius: 50%;
   width: 120px;
   height: 120px;
-  margin-right: 30px;
-}
-
-@media screen and (max-width: 767px) {
-  .profile__avatar {
-    margin: 0 0 26px;
-  }
+  object-fit: cover;
 }
